Fixed item fling effect regression and text overflow

--- a/src/app/items/items.component.css
+++ b/src/app/items/items.component.css
@@ -17,7 +17,7 @@
 .mainbarstyle {
     margin-left:15px;
     margin-right:15px;
-    min-height: 550px;
+    min-height: 600px;
 }
 .infocontainerstyle {
     margin-left: 15px;
